<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/networkType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/network_type_required"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <RadioGroup
        android:id="@+id/networkOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/networkType">

        <RadioButton
            android:id="@+id/noNetwork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/none"/>

        <RadioButton
            android:id="@+id/anyNetwork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/any"/>

        <RadioButton
            android:id="@+id/wifiNetwork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wifi"/>

    </RadioGroup>

    <Button
        android:id="@+id/btn_job"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="scheduleJob"
        android:text="@string/schedule_job"
        app:layout_constraintEnd_toStartOf="@+id/btn_noJob"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/networkOptions"/>

    <Button
        android:id="@+id/btn_noJob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="cancelJob"
        android:text="@string/cancel_job"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_job"
        app:layout_constraintTop_toBottomOf="@id/networkOptions"/>

    <TextView
        android:id="@+id/deviceConstraint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/requires"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_job"/>

    <Switch
        android:id="@+id/idleSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/device_idle"
        app:layout_constraintEnd_toStartOf="@+id/chargingSwitch"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/deviceConstraint"/>

    <Switch
        android:id="@+id/chargingSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/device_charging"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/idleSwitch"
        app:layout_constraintTop_toBottomOf="@id/deviceConstraint"/>

</android.support.constraint.ConstraintLayout>